src/pages/MessageRequests/MessageRequests.module.less
@import '../../index.css';

.approvals {
    background-color: #76bac2;
    color:white;
    margin: 5px 0;
}

.ant-layout {
    background-color: #f0f2f5;
}

.title {
    margin-left: 24px;
    color: var(--app-main-color) !important;
}

.text {
    &:hover {
        opacity: 90%;
        color:  var(--app-main-color) !important;
    }
}

.requestContainer {
    margin-top: 30px;
    height: 75vh;
    > div {
        overflow-y: auto;
    }
}

.divider {
    height: 100%;
    border-width: 2px;
}

.accept {
    background-color: var(--app-main-color);
    color: white;
    margin-right: 10px;
    &:hover {
        background-color: white !important;
        border-color:  var(--app-main-color);
        color:  var(--app-main-color);
    }
}

.decline {
    color: white;
    background-color: #ff4d4f;
    &:hover {
        background-color: white !important;
        border-color: #ff4d4f;
        color: #ff4d4f;
    }
}

.ant-col-1 {
    max-width: 2% !important;
}

.footer {
    text-align: center;
    background-color: #001529 !important;
    color: #E6EFFC !important;
    margin-top: 3px !important;
}

